upgrade wiremock core to 4.0.0-beta.24